force-app/main/default/objects/Expense__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Expense</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>