force-app/main/default/objects/Expense__c/fields/Number_of_Expense_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Expense_Distribution__c</fullName>
    <label>Number of Expense Distribution</label>
    <summaryForeignKey>Expense_Distribution__c.Expense__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>