force-app/main/default/objects/Expense__c/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <description>Total paid amount of the Expense</description>
    <label>Total Paid Amount</label>
    <summarizedField>Expense_Distribution__c.Paid_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Distribution__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>