force-app/main/default/objects/Expense__c/fields/Total_Unpaid_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Unpaid_Employees__c</fullName>
    <description>Total number of employees that didn’t paid all the expense yet</description>
    <label>Total Unpaid Employees</label>
    <summaryFilterItems>
        <field>Expense_Distribution__c.is_Full_Amount_Paid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Distribution__c.Expense__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>