force-app/main/default/objects/Expense__c/validationRules/Prevent_negative_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_negative_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>Cost__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Cost__c</errorDisplayField>
    <errorMessage>Cost cannot be negative</errorMessage>
</ValidationRule>